# FIFA_World_Cup_Predictor

./: .claudeignore  .env.example  .gitignore  README.md  docker-compose.yml  mlflow.db  pyproject.toml  run_mlflow.ps1  runbook.md
config/: bracket_2026.yaml
db/init/: 001_create_databases.sql  01_create_schema.sql  02_create_dims.sql  03_create_facts.sql  04_create_views.sql
docker/app/: Dockerfile  entrypoint.sh
docker/mlflow/: Dockerfile
docker/streamlit/: Dockerfile
scripts/: bootstrap.ps1  bootstrap.sh
src/: __init__.py  cli.py  config.py  pipeline.py  run_evaluation.py  scheduler.py
src/dashboard/: app.py  data.py
src/dashboard/components/: bracket_viz.py  heatmap.py  roi_chart.py
src/dashboard/pages/: 01_probabilidades.py  02_simulacion.py  03_shap.py  04_backtesting.py
src/evaluation/: __init__.py  financial_backtest.py  metrics.py  walk_forward.py
src/explainability/: __init__.py  shap_analysis.py
src/features/: __init__.py  feature_engineering.py
src/ingestion/: __init__.py  base_scraper.py  db_init.py  elo_scraper.py  fbref_scraper.py  fetch_odds.py  loader.py  odds_scraper.py  seed_data.py  sofifa_scraper.py  transfermarkt_scraper.py  validators.py
src/models/: __init__.py  mlflow_tracking.py  optuna_optimizer.py  poisson_model.py  probability_calibrator.py  team_lambda_builder.py  xgboost_trainer.py
src/simulation/: __init__.py  bracket_engine.py  monte_carlo.py
src/utils/: __init__.py  alerts.py  constants.py  db.py  logging_config.py
tests/: __init__.py  conftest.py
tests/test_evaluation/: test_evaluation.py
tests/test_explainability/: test_shap.py
tests/test_features/: __init__.py  test_feature_engineering.py
tests/test_ingestion/: __init__.py  test_db_connection.py  test_validators.py
tests/test_models/: __init__.py  test_poisson.py  test_xgboost.py
tests/test_simulation/: __init__.py  test_monte_carlo.py
